--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ NGROK_URL = 你的NGROK網址
 #LINE_BOT_API
 CHANNEL_ACCESS_TOKEN  = 你的LINE_BOT_API
 CHANNEL_SECRET = 你的CHANNEL_SECRET
+
+##本專案以下未使用
 #OPENAI_API_KEY
 API_KEY = 你的OPENAI_API_KEY
 AZURE_ENDPOINT = 你的AZURE_ENDPOINT
